Bug fix: On Thunderbird on Mac OS X, icon for expanding Options in New Clipping dialog is missing (issue #69)

--- a/src/chrome/skin/mac/new.css
+++ b/src/chrome/skin/mac/new.css
@@ -103,10 +103,6 @@ menu[open="true"] {
 
 /* Mac-specific */
 .expand-options {
-  list-style-image: url("chrome://browser/skin/panel-expander-closed.png");
+  list-style-image: url("chrome://clippings/skin/mac/images/expand.png");
 }
 
-/* Mac-specific */
-.collapse-options {
-  list-style-image: url("chrome://browser/skin/panel-expander-open.png");
-}
